<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="login">LOGIN</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="_2024_damaru">© 2024 Damaru</string>
    <string name="pin">Pin</string>
    <string name="please_enter_valid_email">Please enter valid email</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="enter_your_new_pin">Enter your new PIN</string>
    <string name="re_enter_your_pin">Re-enter your PIN</string>
    <string name="pin_does_not_matches">Pin does not matches</string>
    <string name="enter_your_pin">Enter Your NEW PIN</string>
    <string name="login_label">Please sign in to continue.</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="delete">Delete</string>
    <string name="name">Name</string>
    <string name="error">Error</string>
    <string name="text_expired">Expired</string>
    <string name="text_device_name">Samsung s20</string>
    <string name="text_remaining_days">28 days</string>
    <string name="accounts">Accounts</string>
    <string name="text_add_account">Add Account</string>
    <string name="text_update">Update</string>
    <string name="tap_to_select">Tap to select</string>
    <string name="select">Select</string>
    <string name="no_data_found">No data found</string>
    <string name="text_nav_users">Users</string>
    <string name="text_nav_devices">Devices</string>
    <string name="logout">Logout</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="devices">Devices</string>
    <string name="cancle">Cancel</string>
    <string name="update">Update</string>
    <string name="update_account">Update Account</string>
    <string name="assigned_devices">Assigned Devices</string>
    <string name="logs">Logs</string>
    <string name="expired">EXPIRED</string>
    <string name="extend">Extend</string>
    <string name="assigned_to">Assigned To :</string>
    <string name="edit">Edit</string>
    <string name="ok">Ok</string>
    <string name="change_pin_for_your_account">Change PIN for your account</string>
    <string name="choose_your_option">Choose your option</string>
    <string name="close">Close</string>
    <string name="save">Save</string>
    <string name="edit_device_details">Edit Device Details</string>
    <string name="enter_device_details">Enter device details</string>

</resources>