<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.PinActivity">

    <ImageView
        android:id="@+id/lockIcon"
        android:layout_width="92dp"
        android:layout_height="92dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/lock_icon"
        android:src="@drawable/ic_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pinPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/enter_your_pin"
        android:textColor="@color/colorPrimaryVariant"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lockIcon" />

    <LinearLayout
        android:id="@+id/pinInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pinPrompt">

        <TextView
            android:id="@+id/input1"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="8dp"
            android:background="@drawable/circle_empty" />

        <TextView
            android:id="@+id/input2"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="8dp"
            android:background="@drawable/circle_empty" />

        <TextView
            android:id="@+id/input3"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="8dp"
            android:background="@drawable/circle_empty" />

        <TextView
            android:id="@+id/input4"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="8dp"
            android:background="@drawable/circle_empty" />
    </LinearLayout>


    <GridLayout
        android:id="@+id/keypad"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:rowCount="4"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:layout_marginBottom="50dp"
        android:stretchMode="spacingWidthUniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn1"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:textColor="@color/white"
            android:layout_marginBottom="12dp"
            android:textStyle="bold"
            android:background="@drawable/keypad_button"
            android:text="@string/_1" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:layout_columnWeight="1"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:background="@drawable/keypad_button"
            android:text="@string/_2" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:textStyle="bold"
            android:background="@drawable/keypad_button"
            android:text="@string/_3" />

        <Button
            android:id="@+id/btn4"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:layout_columnWeight="1"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:background="@drawable/keypad_button"
            android:text="@string/_4" />

        <Button
            android:id="@+id/btn5"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:layout_columnWeight="1"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:background="@drawable/keypad_button"
            android:text="@string/_5" />

        <Button
            android:id="@+id/btn6"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:textColor="@color/white"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:background="@drawable/keypad_button"
            android:text="@string/_6" />

        <Button
            android:id="@+id/btn7"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:textStyle="bold"
            android:background="@drawable/keypad_button"
            android:text="@string/_7" />

        <Button
            android:id="@+id/btn8"
            android:layout_width="70dp"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:layout_height="70dp"
            android:layout_marginTop="12dp"
            android:textColor="@color/white"
            android:layout_marginBottom="12dp"
            android:textStyle="bold"
            android:background="@drawable/keypad_button"
            android:text="@string/_8" />

        <Button
            android:id="@+id/btn9"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:textColor="@color/white"
            android:layout_marginBottom="12dp"
            android:textStyle="bold"
            android:background="@drawable/keypad_button"
            android:text="@string/_9" />

        <View
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"/>

        <Button
            android:id="@+id/btn0"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:textStyle="bold"
            android:background="@drawable/keypad_button"
            android:text="@string/_0" />

        <ImageButton
            android:id="@+id/btnClear"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:scaleType="fitCenter"
            android:padding="18dp"
            android:contentDescription="@string/delete"
            android:src="@drawable/baseline_backspace_24"
            app:tint="@color/colorPrimaryVariant" />
    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
