<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium"
        app:cardCornerRadius="@dimen/card_corner_radius"
        app:cardElevation="@dimen/card_elevation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/device_height">

            <TextView
                android:id="@+id/tvRemainingDays"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:background="@drawable/drawable_bg_remaining_days"
                android:elevation="1dp"
                android:fontFamily="@font/quicksand_medium"
                android:paddingStart="@dimen/padding_small"
                android:paddingTop="@dimen/padding_xsmall"
                android:paddingEnd="@dimen/padding_small"
                android:paddingBottom="@dimen/padding_xsmall"
                android:shadowColor="@color/primary"
                android:shadowDx="2.5"
                android:shadowDy="2.3"
                android:shadowRadius="2.6"
                android:text="@string/text_remaining_days"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_small"
                tools:ignore="RelativeOverlap" />

            <ImageView
                android:id="@+id/imgDevice"
                android:layout_width="match_parent"
                android:layout_height="@dimen/device_height"
                android:alpha="0.7"
                android:scaleType="centerCrop"
                android:src="@drawable/screenshot1"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tvDeviceName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@color/blackTransparent"
                android:ellipsize="end"
                android:fontFamily="@font/quicksand_medium"
                android:maxLines="1"
                android:padding="8dp"
                android:text="@string/text_device_name"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_small" />

            <TextView
                android:id="@+id/tvExpired"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/blackTransparent"
                android:fontFamily="@font/quicksand_medium"
                android:gravity="center"
                android:shadowColor="@color/red"
                android:shadowDx="2.5"
                android:shadowDy="2.3"
                android:shadowRadius="2.6"
                android:text="@string/text_expired"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_large"
                android:visibility="gone"
                tools:visibility="visible" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>