<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        app:cardElevation="12dp"
        android:layout_margin="12dp"
        app:contentPaddingBottom="16dp"
        android:layout_gravity="center"
        app:contentPaddingLeft="12dp"
        app:contentPaddingRight="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/btnClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:background="@android:color/transparent"
                android:contentDescription="@null"
                android:padding="12dp"
                android:src="@drawable/ic_close"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/adlam_display"
                android:text="@string/edit_device_details"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvDeviceName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="12dp"
                android:ellipsize="end"
                android:fontFamily="@font/adlam_display"
                android:maxLines="1"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title"
                tools:text="theone sharma" />

            <TextView
                android:id="@+id/tvDeviceId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@+id/tvDeviceName"
                app:layout_constraintTop_toBottomOf="@+id/tvDeviceName"
                tools:text="email@damaru.com" />

            <TextView
                android:id="@+id/lvlAssignedTo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:text="@string/assigned_to"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="11sp"
                app:layout_constraintStart_toStartOf="@+id/tvDeviceName"
                app:layout_constraintTop_toBottomOf="@+id/tvDeviceId" />

            <TextView
                android:id="@+id/tvAssignedTo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:fontFamily="@font/adlam_display"
                android:textColor="@color/secondary"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/lvlAssignedTo"
                app:layout_constraintTop_toTopOf="@+id/lvlAssignedTo"
                tools:text="@string/assigned_to"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtInputLayout"
                style="@style/CustomTextInputLayout"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/enter_device_details"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lvlAssignedTo">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etDetails"
                    style="@style/CustomTextInputEditText"
                    android:inputType="textMultiLine"
                    android:minHeight="120dp"
                    android:gravity="top"
                    android:padding="8dp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnClose2"
                android:layout_width="0dp"
                style="@style/CustomMaterialButton"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/close"
                app:icon="@null"
                android:textColor="@color/white"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                app:backgroundTint="@color/red"
                app:layout_constraintEnd_toStartOf="@+id/btnExtend"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtInputLayout" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnExtend"
                android:layout_width="0dp"
                style="@style/CustomMaterialButton"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/save"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:backgroundTint="@color/greenLight"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toEndOf="@+id/btnClose2"
                app:layout_constraintTop_toTopOf="@+id/btnClose2" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</FrameLayout>